--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ python:
       #- 2.7
 
 install:
+      - pip install pytest pytest-timeout
       - pip install -r requirements.txt
       - pip install coveralls
 
 script:
+      - python setup.py test
       - coverage run --source=ex_test setup.py test
 
 after_success:
