--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+attrs==17.4.0
 bleach==2.1.2
 boto==2.48.0
 boto3==1.5.1
@@ -6,10 +7,13 @@ bz2file==0.98
 certifi==2017.11.5
 chainer==3.2.0
 chardet==3.0.4
+coverage==4.5.1
+coveralls==1.2.0
 cupy==2.2.0
 cycler==0.10.0
 Cython==0.27.3
 decorator==4.2.1
+docopt==0.6.2
 docutils==0.14
 entrypoints==0.2.3
 fastrlock==0.3
@@ -44,12 +48,15 @@ parso==0.1.1
 pexpect==4.4.0
 pickleshare==0.7.4
 Pillow==5.0.0
+pluggy==0.6.0
 progressbar2==3.34.3
 prompt-toolkit==1.0.15
 protobuf==3.5.0.post1
 ptyprocess==0.5.2
+py==1.5.2
 Pygments==2.2.0
 pyparsing==2.2.0
+pytest==3.4.0
 python-dateutil==2.6.1
 python-utils==2.2.0
 pytz==2017.3
